--- a/templates/baseF.html.twig
+++ b/templates/baseF.html.twig
@@ -93,15 +93,33 @@
                      <a href="jewellery.html">Jewellery</a>
                   </div>
                   <span class="toggle_icon" onclick="openNav()"><img src="images/toggle-icon.png"></span>
-                  <div class="dropdown">
-                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All Category 
-                     </button>
-                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                     </div>
-                  </div>
+
+
+                 <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catégories</button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+       {% for c in cate %}
+        <a class="dropdown-item" href="{{ path('showProduitsByCategory', {'categoryId': c.Id_Categorie}) }}">{{ c.NomCategorie }}</a>
+    {% endfor %}
+    </div>
+</div>
+
+
+   <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Trier Par</button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+   
+        <a class="dropdown-item" href="{{ path('showProduitFrontD') }}">Prix Decroissant</a>
+         <a class="dropdown-item" href="{{ path('showProduitFrontC') }}">Prix Croissant</a>
+
+    </div>
+</div>
+
+
+
+
+
+
                   <div class="main">
                      <!-- Another variation with a button -->
 {% block TouskieRecherche %}
@@ -135,9 +153,9 @@
                               <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                               <span class="padding_10">Panier </span></a>
                            </li>
-                           <li><a href="#">
+                           <li><a href="AcceuilD">
                               <i class="fa fa-user" aria-hidden="true"></i>
-                              <span class="padding_10">Profil</span></a>
+                              <span class="padding_10">Prix Desc</span></a>
                            </li>
                         </ul>
                      </div>
@@ -155,7 +173,7 @@
                         <div class="row">
                            <div class="col-sm-12">
                               <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                              <div class="buynow_bt"><a href="Acceuil">Buy Now</a></div>
                            </div>
                         </div>
                      </div>
@@ -163,7 +181,7 @@
                         <div class="row">
                            <div class="col-sm-12">
                               <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                              <div class="buynow_bt"><a href="Acceuil">Buy Now</a></div>
                            </div>
                         </div>
                      </div>
@@ -171,7 +189,7 @@
                         <div class="row">
                            <div class="col-sm-12">
                               <h1 class="banner_taital">Get Start <br>Your favriot shoping</h1>
-                              <div class="buynow_bt"><a href="#">Buy Now</a></div>
+                              <div class="buynow_bt"><a href="Acceuil">Buy Now</a></div>
                            </div>
                         </div>
                      </div>
