--- a/templates/produit/ListProduitBack.html.twig
+++ b/templates/produit/ListProduitBack.html.twig
@@ -1,5 +1,44 @@
 {% extends 'baseBack.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+<style>
+
+   .pagination {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        .pagination a {
+            color: #333;
+            text-decoration: none;
+            padding: 5px 10px;
+            border: 1px solid #ddd;
+            margin: 0 5px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .pagination a:hover {
+            background-color: #f5f5f5;
+        }
+
+        .pagination .current {
+            background-color: #007bff;
+            color: white;
+             padding: 5px 10px;
+            border: 1px solid #ddd;
+            margin: 0 5px;
+            border-radius: 5px;
+        }
+
+
+</style>
+
+
+{% endblock %}
 
 {% block AabiElWest %}
 <div class="container-fluid">
@@ -78,11 +117,13 @@ function imprimer_page(){
                       
                     </tbody>
                 </table>
+              <div class="pagination" > {{ knp_pagination_render(prod) }}</div>
             </div>
+    
         </div>
-    </div>
-</div>
-</div>
+                
+    </div>   
+</div> </div>
 <script>
     function openAddProductInterface() {
         window.location.href = "{{ path('ajoutProd') }}";
