--- a/templates/authentification/register.html.twig
+++ b/templates/authentification/register.html.twig
@@ -22,7 +22,7 @@
                                     <h1 class="h4 text-gray-900 mb-4">Register Here!</h1>
                                 </div>
 
-                                {{ form_start(form) }}
+                                {{ form_start(form, {'attr': {'novalidate': null}}) }}
                                 
                                 
                                 {{ form_widget(form) }}
