--- a/templates/back/index.html.twig
+++ b/templates/back/index.html.twig
@@ -337,15 +337,19 @@
             <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{currentUser.getNomuser}} {{currentUser.getPrenomuser}}</span>
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ app.user.userIdentifier }}</span>
           
-                   <img class="img-profile rounded-circle" src="{{ asset('https://source.unsplash.com/QAB-WJcbgJk/60x60') }}" alt="">
+                   <img class="img-profile rounded-circle" src="{{ asset('images/uploaded/' ~ app.user.image) }}" alt="">
               </a>
                <!-- Dropdown - User Information kal dropBox eli fih hajet teb3in el user -->
                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                   Profile
+                </a>
+                <a class="dropdown-item" href="/">
+                  <i class="fas fa-home fa-sm fa-fw mr-2 text-gray-400"></i>
+                  Home
                 </a>
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -356,7 +360,7 @@
                   Historique de Connexions
                 </a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                <a class="dropdown-item" href="/" data-toggle="modal" data-target="#logoutModal">
                   <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                   Se déconnecter
                 </a>
@@ -373,7 +377,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-4 text-gray-800">Bienvenue à {{currentUser.getNomuser}} !</h1>
+          <h1 class="h3 mb-4 text-gray-800">Bienvenue à {{ app.user.userIdentifier }} !</h1>
 
         </div>
  {% endblock %}
