--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,7 +214,7 @@ button {
 .banner_bg_main {
     width: 100%;
     float: left;
-    background-image: url(../images/banner-bg.png);
+    background-image: url(../images/banner-bg.jpg);
     height: auto;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -1767,5 +1767,4 @@ input.mail_bt::placeholder {
  .form-all {
    box-shadow: none;
  }
-     /* Injected CSS Code */
-/* copyright section end */
+ 
