--- a/templates/commande/confirmation.html.twig
+++ b/templates/commande/confirmation.html.twig
@@ -1,11 +1,14 @@
-{# templates/commande/confirmation.html.twig #}
 {% extends 'base.html.twig' %}
+
+{% block title %}Confirmation de Commande{% endblock %}
+
 {% block AabiElWest1 %}
-
-    <title>Confirmation</title>
-
-    <div>
-        
-        <a href="{{ path('afficher_commande') }}">Retour à la liste des commandes</a>
+    <div class="container text-center">
+        <h1>Confirmation de commande</h1>
+        <p>Votre commande est en cours de traitement ! Merci pour votre confiance.</p>
+        <p>Nous vous enverrons un email de confirmation avec les détails de votre commande et les informations de suivi dès que votre commande sera expédiée.</p>
+        <p>N'hésitez pas à nous contacter si vous avez des questions.</p>
+        <a href="{{ path('app_commande') }}" class="btn btn-primary">Acceuil</a>
     </div>
-{%endblock%}
+    <a href="{{ path('facture', {'panierId': panier.idPanier}) }}">Voir la facture</a>
+{% endblock %}
