--- a/templates/reclamation/addReclamation.html.twig
+++ b/templates/reclamation/addReclamation.html.twig
@@ -94,12 +94,11 @@
 								{% endif %}
 							</div>
 
+
 							<div class="form-group">
-								{{ form_label(form.description) }}
-								{{ form_widget(form.description, { 'attr': {'class': 'form-control','cols': 150} }) }}
-								{% if form_errors(form.description) %}
-									<div class="invalid-feedback">{{ form_errors(form.description) }}</div>
-								{% endif %}
+								{{ form_label(form.description,"description") }}
+								{{ form_errors(form.description) }}
+								{{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
 							</div>
 
 							<button type="submit" class="btn btn-primary">Save</button>
