--- a/templates/reclamation/listReclamation.html.twig
+++ b/templates/reclamation/listReclamation.html.twig
@@ -6,40 +6,137 @@
 	{# Inclut le contenu du bloc stylesheets du template parent #}
 
 	<style>
-		.wrapper {
-			display: grid;
-			grid-template-columns: repeat(4, 1fr);
-			grid-gap: 30px;
+
+		* {
+			margin: 0;
+			padding: 0;
+			font-family: poppins;
+			box-sizing: border-box;
 		}
-		.product-item {
-			background-color: #F0F8FF;
-			padding: 20px;
-			border-radius: 10px;
-			text-align: center;
-			border: 2px solid black;
-			margin-left: 20px; /* Ajoutez la marge à gauche */
-			margin-right: 20px; /* Ajoutez la marge à droite */
-		}
-		.product-item img {
-			max-width: 125%;
-			height: auto;
-		}
-		.product-item a {
-			display: inline-block;
-			background-color: #ff69b4;
-			padding: 10px 20px;
-			border-radius: 20px;
-			color: white;
+		a {
 			text-decoration: none;
 		}
-		.background-colour {
-			background-color: #f5f5f5; /* Remplacez cette valeur par la nuance de gris souhaitée */
-			/*background-image: url('images/ringi.jpg');*/
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-			height: 100vh;
-			position: relative;
+		#testimonials {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			width: 100%;
+		}
+		.testimonial-heading {
+			letter-spacing: 1px;
+			margin: 30px 0;
+			padding: 10px 20px;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
+		.testimonial-heading h1 {
+			font-size: 2.2rem;
+			font-weight: 500;
+			background-color: #202020;
+			color: #ffffff;
+			padding: 10px 20px;
+		}
+		.testimonial-heading span {
+			font-size: 1.3rem;
+			color: #252525;
+			margin-bottom: 10px;
+			letter-spacing: 2px;
+			text-transform: uppercase;
+		}
+		.testimonial-box-container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-wrap: wrap;
+			width: 100%;
+
+		}
+		.testimonial-box {
+			width: 500px;
+			box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+			background-color: #ffffff;
+			padding: 20px;
+			margin: 15px;
+			cursor: pointer;
+		}
+		.profile-img {
+			width: 50px;
+			height: 50px;
+			border-radius: 50%;
+			overflow: hidden;
+			margin-right: 10px;
+		}
+		.profile-img img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			object-position: center;
+		}
+		.profile {
+			display: flex;
+			align-items: center;
+		}
+		.name-user {
+			display: flex;
+			flex-direction: column;
+		}
+		.name-user strong {
+			color: #3d3d3d;
+			font-size: 1.1rem;
+			letter-spacing: 0.5px;
+		}
+		.name-user span {
+			color: #979797;
+			font-size: 0.8rem;
+		}
+		.reviews {
+			color: #f9d71c;
+		}
+		.box-top {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			margin-bottom: 20px;
+		}
+		.client-comment p {
+			font-size: 0.9rem;
+			color: #4b4b4b;
+		}
+		.testimonial-box:hover {
+			transform: translateY(-10px);
+			transition: all ease 0.3s;
+		}
+
+		@media(max-width:1060px) {
+			.testimonial-box {
+				width: 45%;
+				padding: 10px;
+			}
+		}
+		@media(max-width:790px) {
+			.testimonial-box {
+				width: 100%;
+			}
+			.testimonial-heading h1 {
+				font-size: 1.4rem;
+			}
+		}
+		@media(max-width:340px) {
+			.box-top {
+				flex-wrap: wrap;
+				margin-bottom: 10px;
+			}
+			.reviews {
+				margin-top: 10px;
+				margin-right: 20px;
+			}
+		}
+		::selection {
+			color: #ffffff;
+			background-color: #252525;
 		}
 	</style>
 {% endblock %}
@@ -50,52 +147,111 @@
 
 	<div class="fashion_section">
 		<div class="background-colour">
-			<h1>Reclamation traité</h1>
-			<div class="wrapper">
-				{% for R in reclamationT %}
-					<div class="product-item ">
-						<p>type de Reclamation :
-							{{ R.typeReclamation}}</p>
-						<p>description :
-							{{ R.description }}
-						</p>
-						<p>date:
-							{{ R.dateReclamation|date('Y-m-d') }}</p>
-
-						<p>statu:
-							{{ R.statuReclamation }}
-						</p>
 
 
-						<!-- Ajoutez ici le spinner pour la quantité -->
-						<!-- Ajoutez ici le bouton "Ajouter au panier" -->
+			{% for R in reclamationT %}
+				<div
+					class="testimonial-box-container">
+
+
+					<!--BOX-1-------------->
+					<div
+						class="testimonial-box">
+						<!--top------------------------->
+						<div
+							class="box-top">
+							<!--profile----->
+							<div class="profile">
+								<!--img---->
+
+
+								<!--name-and-username-->
+									<div class="name-user"> <strong>{{ R.typeReclamation}}
+									</strong>
+									<span>{{ R.dateReclamation|date('Y-m-d') }}</span>
+									{{ R.statuReclamation }}
+								</div>
+							</div>
+
+							<!--reviews------>
+
+
+							<div class="lang_box ">
+
+								<div class="dropdown-menu "></div>
+
+
+							</div>
+
+
+						</div>
+						<!--Comments---------------------------------------->
+						<div class="client-comment">
+							<p>{{ R.description }}.</p>
+						</div>
 					</div>
-				{% endfor %}
-			</div>
 
-			<h1>Reclamation non traité</h1>
-			<div class="wrapper">
-				{% for R in reclamationNT %}
-					<div class="product-item ">
-						<p>type de Reclamation :
-							{{ R.typeReclamation}}</p>
-						<p>description :
-							{{ R.description }}
-						</p>
-						<p>date:
-							{{ R.dateReclamation|date('Y-m-d H:i:s') }}</p>
+				</div>
+			{% endfor %}
 
-						<p>statu:
-							{{ R.statuReclamation }}
-						</p>
-						<a class="product-button" href="{{ path('app_editReclamation', {'ref': R.idReclamation}) }}">modifier</a>
-						<a class="product-button" href="{{ path('app_deleteReclamation', {'id_r': R.idReclamation}) }}">supprimer</a>
 
-						<!-- Ajoutez ici le spinner pour la quantité -->
-						<!-- Ajoutez ici le bouton "Ajouter au panier" -->
+			{% for R in reclamationNT %}
+				<div
+					class="testimonial-box-container">
+
+
+					<!--BOX-1-------------->
+					<div
+						class="testimonial-box">
+						<!--top------------------------->
+						<div
+							class="box-top">
+							<!--profile----->
+							<div class="profile">
+								<!--img---->
+
+
+								<!--name-and-username-->
+									<div class="name-user"> <strong>{{ R.typeReclamation}}
+									</strong>
+									<span>{{ R.dateReclamation|date('Y-m-d') }}</span>
+									{{ R.statuReclamation }}
+								</div>
+							</div>
+
+							<!--reviews------>
+
+							{% if R.statuReclamation == 'en attente' %}
+								<div class="lang_box ">
+									<a href="#" title="Language" class="nav-link" data-toggle="dropdown" aria-expanded="true">
+										<img src="{{ asset('images/toggle-icon.png')}}" alt="flag" class="mr-2 " title="United Kingdom">
+										<i class="fa fa-angle-down ml-2" aria-hidden="true"></i>
+									</a>
+
+									<div class="dropdown-menu ">
+										<a href="{{ path('app_editReclamation', {'ref': R.getIdReclamation()}) }}" class="dropdown-item">
+											<img src="{{ asset('images/edit.png')}}" class="mr-2" alt="flag">
+											modifier
+										</a>
+										<a href="{{ path('app_deleteReclamation', {'id_r': R.getIdReclamation()}) }}" class="dropdown-item">
+											<img src="{{ asset('images/delete.png')}}" class="mr-2" alt="flag">
+											supprimer
+										</a>
+									</div>
+
+								{% endif %}
+							</div>
+
+
+						</div>
+						<!--Comments---------------------------------------->
+						<div class="client-comment">
+							<p>{{ R.description }}.</p>
+						</div>
 					</div>
-				{% endfor %}
-			</div>
+
+				</div>
+			{% endfor %}
 		</div>
 	</div>
 {% endblock %}
