--- a/templates/baseBack.html.twig
+++ b/templates/baseBack.html.twig
@@ -137,7 +137,7 @@
   <div id="collapseStatisqtiques" class="collapse" aria-labelledby="headingStatistiques" data-parent="#accordionSidebar">
     <div class="bg-white py-2 collapse-inner rounded">
       <a class="collapse-item" href="#">Etat du Stock</a>
-      <a class="collapse-item" href="#">Zomara 1</a>
+      <a class="collapse-item" href="stat">Etat des livraison </a>
       <a class="collapse-item" href="#">Zomara 2</a>
       <a class="collapse-item" href="#">Zomara 3</a>
       <a class="collapse-item" href="#">Njmou nzidou kad mnhebou</a>
