--- a/templates/commande/ListCommande.html.twig
+++ b/templates/commande/ListCommande.html.twig
@@ -13,7 +13,7 @@
         <th>Status</th>
         <th>Actions</th>
     </tr>
-    {% for commande in com %}
+    {% for commande in pagination %}
     <tr>
         <td>{{ commande.reference }}</td>
         <td>{{ commande.idUser.nomuser }} {{ commande.idUser.prenomuser }}</td>
@@ -32,6 +32,6 @@
     </tr>
     {% endfor %}
 </table>
+{{ knp_pagination_render(pagination) }}
 
 {% endblock %}
-
