--- a/templates/commande/AjoutCommande.html.twig
+++ b/templates/commande/AjoutCommande.html.twig
@@ -307,9 +307,12 @@
     
       <!-- Submit Buttons -->
       <div class="form-group"> 
+
+      
+
         <div style="text-align: center;">
-<a href="{{ path('add_commande', {'panierId': panierId}) }}" class="btn btn-primary">Confirmer</a>
-      </div>
+        <a href="{{ path('add_commande', {'user': user}) }}" class="btn btn-primary">Confirmer</a>
+        </div>
 
       </div>
     </form>
