--- a/templates/back/index.html.twig
+++ b/templates/back/index.html.twig
@@ -139,8 +139,8 @@
   <div id="collapseStatisqtiques" class="collapse" aria-labelledby="headingStatistiques" data-parent="#accordionSidebar">
     <div class="bg-white py-2 collapse-inner rounded">
       <a class="collapse-item" href="#">Etat du Stock</a>
-      <a class="collapse-item" href="#">Zomara 1</a>
-      <a class="collapse-item" href="#">Zomara 2</a>
+      <a class="collapse-item" href="statCommande">Etat des Commandes</a>
+      <a class="collapse-item" href="stat">Etat des livraisons </a>
       <a class="collapse-item" href="#">Zomara 3</a>
       <a class="collapse-item" href="#">Njmou nzidou kad mnhebou</a>
   
